--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </style>
 </head>
 <body>
-    <a href="nishchayg.pdf" download="nishchayg.pdf" class="btn">Course Certificate</a>
+    <a href="nptel25mg32648000535.pdf" download="nptel25mg32648000535.pdf" class="btn">Course Certificate</a>
 </body>
 </html>
